# ossnotices

./: .coveragerc  .ossnotices.cache.json  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_purls.txt
docs/: api.md  examples.md  user-guide.md
ossnotices/: __init__.py  cli.py  core.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_integration.py  test_ossnotices.py
